--- a/css/styles.css
+++ b/css/styles.css
@@ -347,7 +347,7 @@ img {
     background-color: var(--button-text-color);
 }
 
-/* Studio title */
+/* STUDIO TITLE*/
 .about-item {
     margin-left: 24px;
 }
@@ -373,7 +373,7 @@ img {
     padding-left: 0;
 }
 
-/* Card-item */
+/*  CARD-ITEM */
 .cards-list {
     display: flex;
     flex-wrap: wrap;
@@ -383,12 +383,9 @@ img {
 .team-card {
     background-color:var(--primary-white-color);
     margin-left: 24px;
-}
-
-.team-card:hover,
-.team-card:focus {
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
+
 
 .team-card:first-child {
     margin-left: 0;
