--- a/css/styles.css
+++ b/css/styles.css
@@ -322,28 +322,29 @@ img {
     justify-content: space-between;
 }
 
+.social-list {
+    display: flex;
+    justify-content: center;
+    gap: 24px;
+}
+
 .social-icon {
+    width:40px;
+    height:40px;
+}
+
+.social-list-link {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 24px;
-    width: 40px;
-    height: 40px;
+    width: 100%;
+    height: 100%;
     border-radius: 50%;
     background-color: var(--primary-brand-color);
 }
 
-.social-icon:first-child {
-    margin-left: 0;
-}
-
-.social-list {
-    padding-left: 16px;
-    padding-right: 16px;
-}
-
-.social-icon:hover,
-.social-icon:focus {
+.social-list-link:hover,
+.social-list-link:focus {
     background-color: var(--button-text-color);
 }
 
